projects/vb6parse/snapshots/parsers/cst/expressions/nothing_literal.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: NothingKeyword
              text: Nothing
        - kind: Newline
          text: "\n"
