projects/vb6parse/snapshots/parsers/cst/expressions/operator_precedence_multiplication_before_addition.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "2"
            - kind: Whitespace
              text: " "
            - kind: AdditionOperator
              text: +
            - kind: Whitespace
              text: " "
            - kind: BinaryExpression
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "3"
                - kind: Whitespace
                  text: " "
                - kind: MultiplicationOperator
                  text: "*"
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "4"
        - kind: Newline
          text: "\n"
